login & logout
- add user_tokens table for storing api token
- authentication by 'Authorization' header
