# routes/web.php
@@ -18,6 +18,12 @@ $router->group(['prefix' => 'v1', 'namespace' => '\Cemal\Http\Controllers'], fun
 
         $app->post('password/reset', 'PasswordController@reset');
         $app->post('password/email', 'PasswordController@requestReset');
+
+        $app->post('login', 'LoginController@login');
+        $app->post('logout', [
+        	'middleware'=>'auth',
+        	'uses'=>'LoginController@logout'
+        ]);
     });
 });
 
